--- a/Unit 1/.project
+++ b/Unit 1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Unit 1 - Data Strictures and Collections</name>
+	<name>Unit 1 - Data Structures and Collections</name>
 	<comment></comment>
 	<projects>
 	</projects>
